--- a/tensorflow/examples/android/BUILD
+++ b/tensorflow/examples/android/BUILD
@@ -91,10 +91,7 @@ android_binary(
 filegroup(
     name = "external_assets",
     srcs = [
-        "@inception5h//:model_files",
-        "@mobile_ssd//:model_files",
-        "@speech_commands//:model_files",
-        "@stylize//:model_files",
+        "//tensorflow/examples/android/assets:asset_files",
     ],
 )
 # LINT.ThenChange(//tensorflow/examples/android/download-models.gradle)
